ページネーション、ユーザープロフィール、カテゴリの追加など

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
 
     <!-- Argon CSS -->
     <link type="text/css" href="/argon/assets/css/argon-design-system.min.css" rel="stylesheet">
+    <link type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.1.0-beta.1/css/select2.min.css" rel="stylesheet">
   </head>
 
   <body>
@@ -29,9 +30,11 @@
       <script src="/argon/assets/js/core/bootstrap.min.js"></script>
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
       <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.1.0-beta.1/js/select2.min.js"></script>
 
       <!-- Argon JS -->
       <script src="/argon/assets/js/argon-design-system.js"></script>
+      <%= yield :scripts %>
     </div>
   </body>
 </html>
