--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -4,5 +4,6 @@
     <% @posts.each do |post| %>
       <%= render "shared/components/post_list_item", post: post %>
     <% end %>
+    <%= paginate @posts %>
   </section>
 </div>
