--- a/app/views/shared/components/_comment_list.html.erb
+++ b/app/views/shared/components/_comment_list.html.erb
@@ -1,6 +1,6 @@
 <div>
   <% comments.each do |comment| %>
-    <%= comment.user %>
+    <%= comment.user.id %>
     <%= comment.content %>
   <% end %>
 </div>
