--- a/app/views/shared/public/_header.html.erb
+++ b/app/views/shared/public/_header.html.erb
@@ -54,8 +54,8 @@
             <% if user_signed_in? %>
               <%= link_to "自分の投稿", user_posts_path, class: "dropdown-item" %>
               <a class="dropdown-item" href="#">いいねした投稿</a>
-              <a class="dropdown-item" href="#">プロフィール編集</a>
-              <a class="dropdown-item" href="#">ログアウト</a>
+              <%= link_to "プロフィール編集", edit_user_user_profile_path, class: 'dropdown-item' %>
+              <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
             <% else %>
               <%= link_to "ログイン", new_user_session_path, class: "dropdown-item" %>
               <%= link_to "会員登録", new_user_registration_path, class: "dropdown-item" %>
