--- a/app/views/user/posts/_form.html.erb
+++ b/app/views/user/posts/_form.html.erb
@@ -4,10 +4,26 @@
     <%= f.text_field :title, class: 'form-control' %>
   </div>
   <div class="form-group">
+    <%= f.label :category %>
+    <%= f.select :category,
+                 Post.categories.keys,
+                 {},
+                 {class: 'form-control'}
+    %>
+  </div>
+  <div class="form-group">
     <%= f.label :content %>
     <%= f.rich_text_area :content %>
   </div>
   <div class="form-group">
     <%= f.submit '送信', class: 'btn btn-primary' %>
   </div>
+<% end %>
+
+<% content_for :scripts do %>
+  <script>
+    $(document).ready(function() {
+      $('.select2').select2();
+    });
+  </script>
 <% end %>
