--- a/app/views/shared/public/_footer.html.erb
+++ b/app/views/shared/public/_footer.html.erb
@@ -9,13 +9,13 @@
             </button>
           </li>
           <li class="nav-item">
-            <a href="" class="nav-link" target="_blank">プライバシーポリシー</a>
+            <%= link_to "プライバシーポリシー", privary_policy_path, class: 'nav-link'%>
           </li>
           <li class="nav-item">
-            <a href="" class="nav-link" target="_blank">利用規約</a>
+            <%= link_to "利用規約", terms_path, class: 'nav-link'%>
           </li>
           <li class="nav-item">
-            <a href="" class="nav-link" target="_blank">クズ男データベースについて</a>
+            <%= link_to "クズ男データベースについて", about_path, class: 'nav-link'%>
           </li>
         </ul>
       </div>
