--- a/app/views/shared/public/_header.html.erb
+++ b/app/views/shared/public/_header.html.erb
@@ -9,7 +9,7 @@
         <div class="row">
             <div class="col-6 collapse-brand">
               <a href="javascript:void(0)">
-                <img src="/argon/assets/img/brand/blue.png">
+                クズ男データベース
               </a>
             </div>
             <div class="col-6 collapse-close">
@@ -21,6 +21,15 @@
         </div>
       </div>
       <ul class="navbar-nav ml-lg-auto">
+        <li class="nav-item dropdown">
+          <a class="nav-link nav-link-icon" href="#" id="navbar-post-dropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <i class="fas fa-question"></i>
+            <span class="nav-link-inner--text d-lg-none">ヘルプ</span>
+          </a>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbar-post-dropdown">
+            <%= link_to "クズ男データベースとは", about_path, class: 'dropdown-item' %>
+          </div>
+        </li>
         <li class="nav-item dropdown">
           <a class="nav-link nav-link-icon" href="#" id="navbar-post-dropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <i class="fas fa-file-alt"></i>
