--- a/app/views/user/posts/_form.html.erb
+++ b/app/views/user/posts/_form.html.erb
@@ -5,10 +5,12 @@
   </div>
   <div class="form-group">
     <%= f.label :category %>
-    <%= f.select :category,
-                 Post.categories.keys,
-                 {},
-                 {class: 'form-control'}
+    <%= f.collection_select :category_id,
+                            Category.all,
+                            :id,
+                            :name,
+                            {},
+                            {class: 'form-control'}
     %>
   </div>
   <div class="form-group">
