管理画面をざっくりと完成

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -21,9 +21,9 @@
 
   <body>
     <div id="wrapper">
-      <%= render "shared/public/header" %>
+      <%= render "shared/admin/header" %>
       <%= yield %>
-      <%= render "shared/public/footer" %>
+      <%= render "shared/admin/footer" %>
       <%= yield :scripts %>
     </div>
   </body>
