--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -1,14 +1,16 @@
 <div class="container">
   <section class="my-4">
     <div class="d-flex justify-content-between mx-2 mb-2">
-      <h2 class="display-4">自分の投稿一覧</h2>
-      <%= link_to "新規投稿", new_user_post_path, class: 'btn btn-primary' %>
+      <%= link_to admin_posts_path do %>
+        <h2 class="display-4">投稿一覧</h2>
+      <% end %>
     </div>
     <div class="table-responsive">
       <table class="table">
         <thead>
           <tr>
             <th class="text-nowrap">タイトル</th>
+            <th class="text-nowrap">ユーザー</th>
             <th class="text-nowrap">カテゴリ</th>
             <th class="text-nowrap">タグ</th>
             <th class="text-nowrap">いいね数</th>
@@ -21,16 +23,29 @@
         <tbody>
           <% @posts.each do |post| %>
             <tr>
-              <td class="text-center"><%= post.title %></td>
-              <td><%= post.category.name %></td>
+              <td class="text-center">
+                <%= post.title %>
+              </td>
+              <td>
+                <%= link_to admin_posts_path(user_id: post.user.id) do %>
+                  <%= post.user.user_name %>
+                <% end %>
+              </td>
+              <td>
+                <%= post.category.name %>
+              </td>
               <td><%= post.tags.pluck(:name).join("、") %></td>
               <td><%= post.favorites.count %></td>
               <td><%= post.comments.count %></td>
               <td><%= post.impressionist_count %></td>
               <td><%= l post.created_at %></td>
               <td class="td-actions text-nowrap">
-                <%= link_to "編集", edit_user_post_path(post) , class:"btn btn-success btn-icon btn-sm" %>
-                <%= link_to "削除", user_post_path(post) , class:"btn btn-danger btn-icon btn-sm", method: :delete, data: {confirm: "削除しますか？"} %>
+                <%= link_to "詳細", post_path(post) , class: "btn btn-info btn-icon btn-sm", target: :_blank %>
+                <% if post.approval == "published" %>
+                  <%= link_to "非承認", admin_post_approval_path(post, approval: "prohibit"), class:"btn btn-danger btn-icon btn-sm", method: :patch, data: {confirm: "非承認にしますか？"} %>
+                <% else %>
+                  <%= link_to "承認", admin_post_approval_path(post, approval: "published"), class:"btn btn-success btn-icon btn-sm", method: :patch, data: {confirm: "承認しますか？"} %>
+                <% end %>
               </td>
             </tr>
           <% end %>
