--- a/app/views/shared/components/_post_list_item.html.erb
+++ b/app/views/shared/components/_post_list_item.html.erb
@@ -15,10 +15,11 @@
       </span>
     </div>
     <%= post.content %>
-    <div class="mt-1 pt-1">
+    <div class="mt-1 pt-1 d-flex justify-content-between">
       <div>
         <i class="fas fa-eye mr-1"></i><%= number_with_delimiter(post.impressionist_count) %>
       </div>
+      <%= render "shared/public/sns_buttons", url: request.url, title: post.title %>
     </div>
   </div>
 </div>
