userのメールテンプレートを日本語化

--- a/app/views/users/mailer/email_changed.html.erb
+++ b/app/views/users/mailer/email_changed.html.erb
@@ -1,7 +1,7 @@
-<p>Hello <%= @email %>!</p>
+<p>クズ男データベースに登録されているメールアドレスが<%= @email %>に変更されました。</p>
 
 <% if @resource.try(:unconfirmed_email?) %>
-  <p>We're contacting you to notify you that your email is being changed to <%= @resource.unconfirmed_email %>.</p>
+  <p>メールアドレスを<%= @resource.unconfirmed_email %>に変更しようとしています。</p>
 <% else %>
-  <p>We're contacting you to notify you that your email has been changed to <%= @resource.email %>.</p>
+  <p>メールアドレスが<%= @resource.email %>に変更されました。</p>
 <% end %>
