--- a/app/views/users/mailer/reset_password_instructions.html.erb
+++ b/app/views/users/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,6 @@
-<p>Hello <%= @resource.email %>!</p>
+<p><%= @resource.email %>のメールアドレスでパスワードリセットが申請されました。下記のリンクをクリックしてパスワードリセットすることができます。</p>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+<p><%= link_to 'パスワードを変更する', edit_password_url(@resource, reset_password_token: @token) %></p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
-
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<p>もしパスワードリセットを実行していなければこのメッセージは無視してください。</p>
+<p>パスワードはあなたが上記のリンクをクリックし、新しいパスワードを入力するまで変更されません。</p>
