--- a/app/views/users/mailer/unlock_instructions.html.erb
+++ b/app/views/users/mailer/unlock_instructions.html.erb
@@ -1,7 +1,5 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>複数回ログインに失敗したため<%= @resource.email %>のメールアドレスのアカウントがロックされました。</p>
 
-<p>Your account has been locked due to an excessive number of unsuccessful sign in attempts.</p>
+<p>下のリンクをクリックしてアカウントロックを解除してください:</p>
 
-<p>Click the link below to unlock your account:</p>
-
-<p><%= link_to 'Unlock my account', unlock_url(@resource, unlock_token: @token) %></p>
+<p><%= link_to 'アカウントロックを解除する', unlock_url(@resource, unlock_token: @token) %></p>
