--- a/app/views/shared/public/_footer.html.erb
+++ b/app/views/shared/public/_footer.html.erb
@@ -17,13 +17,16 @@
           <li class="nav-item">
             <%= link_to "クズ男データベースについて", about_path, class: 'nav-link'%>
           </li>
+          <li class="nav-item">
+            <%= link_to "運営者情報", operator_path, class: 'nav-link'%>
+          </li>
         </ul>
       </div>
     </div>
     <div class="row mt-3">
       <div class="col-md-12">
         <div class="copyright text-center">
-          &copy; 2020 <a href="" target="_blank">クズ男データベース</a>
+          &copy; <%= DateTime.now.year %> <a href="#" target="_blank">クズ男データベース</a>
         </div>
       </div>
     </div>
