--- a/app/views/user/posts/_form.html.erb
+++ b/app/views/user/posts/_form.html.erb
@@ -14,6 +14,17 @@
     %>
   </div>
   <div class="form-group">
+   <%= f.label :post_tags %>
+   <%= f.fields_for :post_tags do |post_tag| %>
+      <div class="field">
+        <%= render 'post_tag_fields', f: post_tag %>
+      </div>
+    <%- end %>
+    <div class="links">
+      <%= link_to_add_association 'タグを追加', f, :post_tags %>
+    </div>
+  </div>
+  <div class="form-group">
     <%= f.label :content %>
     <%= f.rich_text_area :content %>
   </div>
