--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -11,6 +11,19 @@
     <h2 class="display-4">
       <%= @post.title %>
     </h2>
+    <div>
+      <% @post.tags.each do |tag| %>
+        <%= link_to posts_path(tag: tag), class:"badge badge-primary mr-2" do %>
+          <%= tag.name %>
+        <% end %>
+      <% end %>
+    </div>
+    <div class="font-size-xs my-1">
+      カテゴリー:
+      <%= link_to posts_path(category: @post.category), class: "text-warning" do %>
+        <%= @post.category.name %>
+      <% end %>
+    </div>
     <div class="d-flex align-items-center">
       <img src="/argon/assets/img/faces/team-4.jpg" class="rounded-circle w-70px">
       <p class="ml-2 mb-0">サイゼさん</p>
@@ -23,7 +36,7 @@
         <i class="fas fa-eye mr-1"></i>
         <%= number_with_delimiter(@page_views) %>
       </div>
-      <%= render "shared/public/sns_buttons", url: request.url, title: @post.title %>
+      <%= render "shared/public/sns_buttons", url: post_path(@post), title: @post.title %>
     </div>
     <div class="mt-3">
       <h4>みんなのコメント</h4>
