--- a/app/views/shared/components/_post_list_item.html.erb
+++ b/app/views/shared/components/_post_list_item.html.erb
@@ -3,7 +3,20 @@
     <%= image_tag(post.user.user_image(size: :thumb), class: "rounded-circle w-100 w-md-75") %>
     <p class="mt-1"><%= post.user.user_name %></p>
   <% end %>
-  <div class="col-9 col-md-10">
+  <div class="col-9 col-md-10 d-flex flex-column justify-content-between">
+    <div>
+      <% post.tags.each do |tag| %>
+        <%= link_to posts_path(tag: tag), class:"badge badge-primary mr-2" do %>
+          <%= tag.name %>
+        <% end %>
+      <% end %>
+    </div>
+    <div class="font-size-xs my-1">
+      カテゴリー:
+      <%= link_to posts_path(category: post.category), class: "text-warning" do %>
+        <%= post.category.name %>
+      <% end %>
+    </div>
     <div class="d-flex align-items-center">
       <h3 class="font-size-xl m-0">
         <%= link_to post_path(post) do %>
@@ -19,7 +32,7 @@
       <div>
         <i class="fas fa-eye mr-1"></i><%= number_with_delimiter(post.impressionist_count) %>
       </div>
-      <%= render "shared/public/sns_buttons", url: request.url, title: post.title %>
+      <%= render "shared/public/sns_buttons", url: post_path(post), title: post.title %>
     </div>
   </div>
 </div>
