--- a/app/views/user/posts/index.html.erb
+++ b/app/views/user/posts/index.html.erb
@@ -21,7 +21,11 @@
         <tbody>
           <% @posts.each do |post| %>
             <tr>
-              <td class="text-center"><%= post.title %></td>
+              <td class="text-center">
+                <%= link_to post_path(post), target: :_blank, rel: :noopener do %>
+                  <%= post.title %>
+                <% end %>
+              </td>
               <td><%= post.category.name %></td>
               <td><%= post.tags.pluck(:name).join("、") %></td>
               <td><%= post.favorites.count %></td>
