- change log settings - change email address

--- a/app/views/public/privary_policy.html.erb
+++ b/app/views/public/privary_policy.html.erb
@@ -136,7 +136,7 @@
       <div class="font-weight-bold font-size-xl">第10条（お問い合わせ窓口）</div>
       <p>本ポリシーに関するお問い合わせは，下記の窓口までお願いいたします。</p>
       <div>
-        Eメールアドレス: yuta.omori@gmail.com
+        Eメールアドレス: info.forest.services@gmail.com
       </div>
     </section>
     <div class="text-right">以上</div>
