- meta tag 追加 - delete files

--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -3,6 +3,9 @@
                  og: {
                    title: @post.title,
                    image: ogp_images_url(text: @post.content.to_plain_text.gsub(/[ ]/,""))
+                 },
+                 twitter: {
+                   card: "summary_large_image",
                  }
 %>
 
