--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -39,7 +39,7 @@
         <i class="fas fa-eye mr-1"></i>
         <%= number_with_delimiter(@page_views) %>
       </div>
-      <%= render "shared/public/sns_buttons", url: post_path(@post), title: @post.title %>
+      <%= render "shared/public/sns_buttons", url: post_url(@post), title: @post.title %>
     </div>
     <div class="mt-3">
       <h4>みんなのコメント</h4>
