--- a/app/views/shared/components/_post_list_item.html.erb
+++ b/app/views/shared/components/_post_list_item.html.erb
@@ -32,7 +32,7 @@
       <div>
         <i class="fas fa-eye mr-1"></i><%= number_with_delimiter(post.impressionist_count) %>
       </div>
-      <%= render "shared/public/sns_buttons", url: post_path(post), title: post.title %>
+      <%= render "shared/public/sns_buttons", url: post_url(post), title: post.title %>
     </div>
   </div>
 </div>
