--- a/app/assets/stylesheets/foundation.scss
+++ b/app/assets/stylesheets/foundation.scss
@@ -15,3 +15,14 @@ footer {
     width: #{$width}px;
   }
 }
+
+.thumb-img-wrapper {
+  width: 80px;
+  height: 80px;
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+  }
+}
