--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -28,8 +28,8 @@
       <% end %>
     </div>
     <div class="d-flex align-items-center">
-      <img src="/argon/assets/img/faces/team-4.jpg" class="rounded-circle w-70px">
-      <p class="ml-2 mb-0">サイゼさん</p>
+      <%= image_tag(@post.user.user_image(size: :thumb), class: "rounded-circle w-70px") %>
+      <p class="ml-2 mb-0"><%= @post.user.user_name %></p>
     </div>
     <div class="mt-3">
       <%= @post.content %>
