--- a/app/views/shared/components/_post_list_item.html.erb
+++ b/app/views/shared/components/_post_list_item.html.erb
@@ -1,6 +1,8 @@
 <div class="py-4 row border-bottom border-primary">
   <%= link_to user_path(post.user), class: "col-3 col-md-2 d-flex flex-column align-items-center d-block" do %>
-    <%= image_tag(post.user.user_image(size: :thumb), class: "rounded-circle w-100 w-md-75") %>
+    <div class="thumb-img-wrapper">
+      <%= image_tag(post.user.user_image(size: :thumb), class: " w-100 w-md-75") %>
+    </div>
     <p class="mt-1"><%= post.user.user_name %></p>
   <% end %>
   <div class="col-9 col-md-10 d-flex flex-column justify-content-between">
