--- a/app/views/users/shared/_links.html.erb
+++ b/app/views/users/shared/_links.html.erb
@@ -19,9 +19,9 @@
     <%= link_to "Didn't receive unlock instructions?", new_unlock_path(resource_name) %><br />
   <% end %>
 
-  <%#- if devise_mapping.omniauthable? %>
-    <%#- resource_class.omniauth_providers.each do |provider| %>
-      <%#= link_to "#{OmniAuth::Utils.camelize(provider)}でログインする", user_twitter_omniauth_authorize_path(resource_name, provider), class:"badge badge-info mr-2" %><br />
-    <%# end %>
-  <%# end %>
+  <%- if devise_mapping.omniauthable? %>
+    <%- resource_class.omniauth_providers.each do |provider| %>
+      <%= link_to "#{OmniAuth::Utils.camelize(provider)}でログインする", user_twitter_omniauth_authorize_path(), class:"badge badge-info mr-2" %><br />
+    <% end %>
+  <% end %>
 </div>
