--- a/app/views/shared/public/_footer.html.erb
+++ b/app/views/shared/public/_footer.html.erb
@@ -9,16 +9,16 @@
             </button>
           </li>
           <li class="nav-item">
-            <%= link_to "プライバシーポリシー", privary_policy_path, class: 'nav-link'%>
+            <%= link_to "プライバシーポリシー", privacy_policy_path, class: 'nav-link' %>
           </li>
           <li class="nav-item">
-            <%= link_to "利用規約", terms_path, class: 'nav-link'%>
+            <%= link_to "利用規約", terms_path, class: 'nav-link' %>
           </li>
           <li class="nav-item">
-            <%= link_to "クズ男データベースについて", about_path, class: 'nav-link'%>
+            <%= link_to "クズ男データベースについて", about_path, class: 'nav-link' %>
           </li>
           <li class="nav-item">
-            <%= link_to "運営者情報", operator_path, class: 'nav-link'%>
+            <%= link_to "運営者情報", operator_path, class: 'nav-link' %>
           </li>
         </ul>
       </div>
