- headerの検索とりあえずコメントアウト - ページネーション改善

--- a/app/views/admin/tags/edit.html.erb
+++ b/app/views/admin/tags/edit.html.erb
@@ -2,7 +2,7 @@
   <section class="my-4">
     <div class="d-flex justify-content-between align-items-center mx-2 mb-2">
       <h2 class="display-4">編集</h2>
-      <%= link_to "タグ一覧に戻る", admin_tags_path, class: 'btn btn-primary' %>
+      <%= link_to "カテゴリー一覧に戻る", admin_tags_path, class: 'btn btn-primary' %>
     </div>
     <%= render "form" %>
   </section>
