--- a/app/views/shared/admin/_footer.html.erb
+++ b/app/views/shared/admin/_footer.html.erb
@@ -17,6 +17,9 @@
           <li class="nav-item">
             <%= link_to "クズ男データベースについて", about_path, class: 'nav-link'%>
           </li>
+          <li class="nav-item">
+            <%= link_to "運営者情報", operator_path, class: 'nav-link' %>
+          </li>
         </ul>
       </div>
     </div>
