--- a/app/views/shared/public/_header.html.erb
+++ b/app/views/shared/public/_header.html.erb
@@ -40,7 +40,7 @@
             <%= link_to "自分の投稿", user_posts_path, class: 'dropdown-item' %>
           </div>
         </li>
-        <li class="nav-item dropdown">
+        <%# <li class="nav-item dropdown">
           <a class="nav-link nav-link-icon" href="#" id="navbar-search-dropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <i class="fas fa-search"></i>
             <span class="nav-link-inner--text d-lg-none">検索</span>
@@ -53,7 +53,7 @@
               </form>
             </div>
           </div>
-        </li>
+        </li> %>
         <li class="nav-item dropdown">
           <a class="nav-link nav-link-icon" href="#" id="navbar-user-dropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <i class="fas fa-user"></i>
@@ -62,7 +62,6 @@
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbar-user-dropdown">
             <% if user_signed_in? %>
               <%= link_to "自分の投稿", user_posts_path, class: "dropdown-item" %>
-              <a class="dropdown-item" href="#">いいねした投稿</a>
               <%= link_to "プロフィール編集", edit_user_user_profile_path, class: 'dropdown-item' %>
               <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
             <% else %>
