--- a/app/views/public/index.html.erb
+++ b/app/views/public/index.html.erb
@@ -1,3 +1,11 @@
+<% set_meta_tags title: "",
+                 description: "クズ男でデータベースは日常生活の中でクズだと思った男性について個人の中傷にならない範囲で情報を共有する投稿サイトです。",
+                 og: {
+                   title: "クズ男データベース",
+                   description: "クズ男でデータベースは日常生活の中でクズだと思った男性について個人の中傷にならない範囲で情報を共有する投稿サイトです。",
+                   image: image_url("top-ogp.jpg")
+                 }
+%>
 <div class="container mt-4">
   <section class="my-4">
     <h2 class="display-4">新着のクズ男体験談</h2>
