--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -2,10 +2,8 @@
                  description: @post.content.to_plain_text,
                  og: {
                    title: @post.title,
+                   description: @post.content,
                    image: ogp_images_url(text: @post.content.to_plain_text.gsub(/[ ]/,""))
-                 },
-                 twitter: {
-                   card: "summary_large_image",
                  }
 %>
 
@@ -27,12 +25,12 @@
         <%= @post.category.name %>
       <% end %>
     </div>
-    <div class="d-flex align-items-center">
+    <%= link_to user_path(@post.user), class: "d-flex align-items-center" do %>
       <div class="thumb-img-wrapper">
         <%= image_tag(@post.user.user_image(size: :thumb), class: "w-100 w-md-75") %>
       </div>
       <p class="ml-2 mb-0"><%= @post.user.user_name %></p>
-    </div>
+    <% end %>
     <div class="mt-3">
       <%= @post.content %>
     </div>
