--- a/app/views/shared/public/_header.html.erb
+++ b/app/views/shared/public/_header.html.erb
@@ -40,20 +40,20 @@
             <%= link_to "自分の投稿", user_posts_path, class: 'dropdown-item' %>
           </div>
         </li>
-        <%# <li class="nav-item dropdown">
+        <li class="nav-item dropdown">
           <a class="nav-link nav-link-icon" href="#" id="navbar-search-dropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <i class="fas fa-search"></i>
             <span class="nav-link-inner--text d-lg-none">検索</span>
           </a>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbar-search-dropdown">
             <div class="mx-3 search-box-container">
-              <form class="d-flex">
-                <input type="text" placeholder="検索" class="form-control">
+              <%= form_with url: posts_path, method: :get, local: true, class: "d-flex" do |form| %>
+                <input name="search" type="text" placeholder="検索" class="form-control">
                 <button class="btn btn-primary w-100px" type="submit">検索</button>
-              </form>
+              <% end%>
             </div>
           </div>
-        </li> %>
+        </li>
         <li class="nav-item dropdown">
           <a class="nav-link nav-link-icon" href="#" id="navbar-user-dropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <i class="fas fa-user"></i>
