--- a/app/views/shared/public/_sns_buttons.html.erb
+++ b/app/views/shared/public/_sns_buttons.html.erb
@@ -6,7 +6,7 @@
       </a>
     </li>
     <li class="facebook">
-      <a href="https://www.facebook.com/sharer/sharer.php?u=<%= url %>" target="_blank" rel="nofollow noopener noreferrer">
+      <a href="https://www.facebook.com/sharer/sharer.php?u=<%= url %>" target="_blank" rel="nofollow">
         <i class="fab fa-facebook"></i>
       </a>
     </li>
