--- a/app/views/shared/public/_sns_buttons.html.erb
+++ b/app/views/shared/public/_sns_buttons.html.erb
@@ -5,10 +5,10 @@
         <i class="fab fa-twitter"></i>
       </a>
     </li>
-    <li class="facebook">
-      <a href="https://www.facebook.com/sharer/sharer.php?u=<%= url %>" target="_blank" rel="nofollow">
+    <!-- <li class="facebook">
+      <a href="https://www.facebook.com/sharer/sharer.php?u=<%#= url %>" target="_blank" rel="nofollow">
         <i class="fab fa-facebook"></i>
       </a>
-    </li>
+    </li> -->
   </ul>
 </div>
