- add analytic tag - fix layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <%= render "shared/public/analytics_code" %>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <% set_meta_tags og: {
