--- a/app/views/users/shared/_links.html.erb
+++ b/app/views/users/shared/_links.html.erb
@@ -1,4 +1,4 @@
-<div class="d-flex my-3 align-items-center">
+<div class="d-flex my-3 align-items-center flex-wrap">
   <%- if controller_name != 'sessions' %>
     <%= link_to "ログインする", new_session_path(resource_name), class: "badge badge-success mr-2" %><br />
   <% end %>
