change mail template

--- a/app/views/users/mailer/email_changed.html.erb
+++ b/app/views/users/mailer/email_changed.html.erb
@@ -1,4 +1,4 @@
-<p>クズ男データベースに登録されているメールアドレスが<%= @email %>に変更されました。</p>
+<p>クズ男データベースに登録されているメールアドレスが<%= @email %>に変更するリクエストが送信されました。</p>
 
 <% if @resource.try(:unconfirmed_email?) %>
   <p>メールアドレスを<%= @resource.unconfirmed_email %>に変更しようとしています。</p>
